fixed title spacing

--- a/css/app.css
+++ b/css/app.css
@@ -543,6 +543,10 @@ pre span.lw {
   color: #b4b4b4;
 }
 
+h1 {
+    margin: 15px;
+}
+
 
 /* ================================================================== */
 /* Table of contents */
